remove formatted